# SystemsProgramming-CPP

./: README.md
AncestorTree/: CMakeLists.txt  Demo.cpp  FamilyTree.cpp  FamilyTree.hpp  Test.cpp  demo  test
Itertools/: CMakeLists.txt  accumulate.hpp  compress.hpp  filterfalse.hpp  range.hpp  test
PhoneticSearch/: CMakeLists.txt  Demo.cpp  PhoneticFinder.cpp  PhoneticFinder.hpp  Test.cpp  test
Solver/: CMakeLists.txt  Test.cpp  Test1.cpp  Test2.cpp  TestRunner.cpp  Test_iris.cpp  Test_shahar.cpp  solver.cpp  solver.hpp  test
WarGame/: Board.cpp  Board.hpp  CMakeLists.txt  Demo.cpp  FootCommander.cpp  FootCommander.hpp  FootSoldier.cpp  FootSoldier.hpp  Paramedic.cpp  Paramedic.hpp  ParamedicCommander.cpp  ParamedicCommander.hpp  Sniper.cpp  Sniper.hpp  SniperCommander.cpp  SniperCommander.hpp  Soldier.hpp  test
